--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,11 +1,14 @@
 body {
     font-family: "Helvetica", "Lucida Grande", sans-serif;
     color: #3D3D3D;
+    width: 940px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 h1 {
-    
     background-color: #E1EDF2;
+    padding: 10px;
 }
 
 h2 {
@@ -16,4 +19,11 @@ figure {
     text-align: center;
     background-color: whitesmoke;
     border: 1px solid lightgrey;
+    margin: 30px;
+    padding: 15px;
 }
+
+figcaption {
+     padding-top: 10px;
+}
+
